Add intro text to form section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,27 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    <div class="image-sidebar">
-        <div class="logo">
-            <span class="logo-img">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm457-560 21-89-71-59 94-8 36-84 36 84 94 8-71 59 21 89-80-47-80 47ZM480-481Z"/></svg>
-            </span>
-            <span class="logo-text">
-                Astro
-            </span>
+    <div class="full">
+        <div class="image-sidebar">
+            <div class="logo">
+                <span class="logo-img">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm457-560 21-89-71-59 94-8 36-84 36 84 94 8-71 59 21 89-80-47-80 47ZM480-481Z"/></svg>
+                </span>
+                <span class="logo-text">
+                    Astro
+                </span>
+            </div>
+            <p class="sidebar-credit">
+                Photo by <a href="https://unsplash.com/@the_iop" target="_blank" rel="noreferrer">the iop</a>
+                on <a href="https://unsplash.com/" target="_blank" rel="noreferrer">Unsplash</a>.
+            </p>
         </div>
-        <p class="sidebar-credit">
-            Photo by <a href="https://unsplash.com/@the_iop" target="_blank" rel="noreferrer">the iop</a>
-            on <a href="https://unsplash.com/" target="_blank" rel="noreferrer">Unsplash</a>.
-        </p>
+        <div class="form-section">
+            <div class="intro-text">
+                <div class="intro-main">Where Stargazers Become Friends</div>
+                <div class="intro-sub">Share observations, ask questions, and connect with fellow astronomy enthusiasts.</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
