--- a/index.html
+++ b/index.html
@@ -28,6 +28,49 @@
                 <div class="intro-main">Where Stargazers Become Friends</div>
                 <div class="intro-sub">Share observations, ask questions, and connect with fellow astronomy enthusiasts.</div>
             </div>
+            <div class="form">
+                <form action="" method="post">
+                    <div class="main-form">
+                        <h2>Let's do this!</h2>
+                        <fieldset>
+                            <div>
+                                <label for="first_name">First Name</label>
+                                <input type="text" id="first_name" name="first_name" placeholder="Thor">
+                            </div>
+                            <div>
+                                <label for="last_name">Last Name</label>
+                                <input type="text" id="last_name" name="last_name" placeholder="Odinson">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div>
+                                <label for="user_email">Email</label>
+                                <input type="email" id="user_email" name="email" placeholder="thor@gmail.com">
+                            </div>
+                            <div>
+                                <label for="user_phone">Phone Number</label>
+                                <input type="tel" id="user_phone" name="phone">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div>
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password">
+                            </div>
+                            <div>
+                                <label for="confirm_password">Confirm Password</label>
+                                <input type="password" id="confirm_password" name="confirm_password">
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div class="submit">
+                        <button type="submit">Create Account</button>
+                    </div>
+                </form>
+            </div>
+            <div class="login">
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
